Fix background image on iOS.

--- a/large.css
+++ b/large.css
@@ -2,7 +2,7 @@
     margin-top: 1em;
     align-content: center;
     max-width: 600px;
-
+    background-attachment: fixed;
     margin: auto;
     padding: 0.1em 2em 2em 2em;
     font-size: 1.3em;
