--- a/style.css
+++ b/style.css
@@ -1,10 +1,9 @@
 body {
     font-family: 'IM Fell English', 'Georgia', serif;
     background: #071831;
-
     background-image: url("img/jumping_viking_square.jpg");
     background-size: cover;
-    background-attachment: fixed;
+    background-attachment: scroll;
     background-repeat: no-repeat;
     background-position: bottom;
 }
